--- a/form.html
+++ b/form.html
@@ -228,7 +228,7 @@
     <footer class="page-footer">
       <div class="container">
         <a href="#" class="page-footer__logo">
-          <img src="http://placehold.it/86x35" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
+          <img src="http://placehold.it/102x34" alt="MISHKA" class="page-footer__logo-image" width="102" height="34">
         </a>
         <ul class="page-footer__social social__list">
           <li class="social__item">
@@ -257,8 +257,8 @@
         <div class="page-footer__coopyright coopyright">
           <a href="#" class="coopyright__link">
             <span class="coopyright__text">Разработано</span>
-            <svg class="copyright__link--icon" width="27" height="37">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy" x="0" y="3" width="26.943" height="34.09"></use>
+            <svg class="coopyright__link--icon" width="27" height="37">
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy" width="27" height="34"></use>
             </svg>
           </a>
         </div>
