--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
     <footer class="page-footer">
       <div class="container">
         <a href="#" class="page-footer__logo">
-          <img src="http://placehold.it/86x35" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
+          <img src="http://placehold.it/102x34" alt="MISHKA" class="page-footer__logo-image" width="102" height="34">
         </a>
         <ul class="page-footer__social social__list">
           <li class="social__item">
