--- a/catalog.html
+++ b/catalog.html
@@ -130,11 +130,14 @@
         <div class="container">
           <ul class="main-catalog__list product-preview">
             <li class="product-preview__item">
-
-              <img src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="" class="product-preview__img">
+                <a href="#" class="product-preview__img-linl">
+                  <img src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="" class="product-preview__img">
+                </a>
               <div class="product-preview__wrapper">
                 <div class="product-preview__info">
-                  <h3 class="subtitle product-preview__title">Зайчик-попрыгайчик</h3>
+                  <h3 class="subtitle product-preview__title">
+                    <a href="" class="product-preview__title-link">Зайчик-попрыгайчик</a>
+                  </h3>
                   <b class="product-preview__value">Рост 30 см, вес 200 г</b>
                 </div>
                 <div class="product-preview__buy">
@@ -145,13 +148,18 @@
                     </svg>
                   </a>
                 </div>
+                </div>
 
               </li>
               <li class="product-preview__item">
-                <img src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Корзинка для белья" class="product-preview__img">
+                <a href="" class="product-preview__img-link">
+                  <img src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Корзинка для белья" class="product-preview__img">
+                </a>
                 <div class="product-preview__wrapper">
                   <div class="product-preview__info">
-                    <h3 class="subtitle product-preview__title">Корзинка для белья</h3>
+                    <h3 class="subtitle product-preview__title">
+                      <a href="" class="product-preview__title-link">Корзинка для белья</a>
+                      </h3>
                     <b class="product-preview__value">Диаметр 15 см, высота 10 см</b>
                   </div>
                   <div class="product-preview__buy">
@@ -165,10 +173,14 @@
                 </div>
               </li>
               <li class="product-preview__item">
-                <img src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка для игрушек" class="product-preview__img">
+                <a href="" class="product-preview__img-link">
+                  <img src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка для игрушек" class="product-preview__img">
+                </a>
                 <div class="product-preview__wrapper">
                   <div class="product-preview__info">
-                    <h3 class="subtitle product-preview__title">Большая корзинка для&nbsp;игрушек</h3>
+                    <h3 class="subtitle product-preview__title">
+                      <a href="" class="product-preview__title-link">Большая корзинка для&nbsp;игрушек</a>
+                      </h3>
                     <b class="product-preview__value">Диаметр 30 см, высота 30 см</b>
                   </div>
                   <div class="product-preview__buy">
