--- a/form.html
+++ b/form.html
@@ -129,12 +129,12 @@
           <div class="form-order__section">
             <h2 class="form-order__section-title">Тип</h2>
             <div class="form-order__options form-order__options--type">
-              <label class="subtitle form-order__label form-order__label-radio">
-                <input class="form-order__input" type="radio" name="type" value="Аксессуар для интерьера">
+              <input id="accessory" class="form-order__input" type="radio" name="type" value="Аксессуар для интерьера" checked>
+              <label class="subtitle form-order__label form-order__label-radio" for="accessory">
                 Аксессуар для интерьера
               </label>
-              <label class="subtitle form-order__label form-order__label-radio">
-                <input class="form-order__input" type="radio" name="type" value="Детская игрушка">
+              <input id="toy" class="form-order__input" type="radio" name="type" value="Детская игрушка">
+              <label class="subtitle form-order__label form-order__label-radio" for="toy">
                 Детская игрушка
               </label>
             </div>
@@ -142,28 +142,34 @@
           <div class="form-order__section form-order__section-grey">
             <h2 class="form-order__section-title">Цвет</h2>
             <div class="form-order__options form-order__options--color">
-              <label class="subtitle form-order__label form-order__label-checkbox">
-                <input type="checkbox" class="form-order__input" name="product-color__white" checked>
+              <input type="checkbox" class="form-order__input" id="white" name="product-color__white" checked>
+              <label class="subtitle form-order__label form-order__label-checkbox" for="white">
+
                 Белый
               </label>
-              <label class="subtitle form-order__label form-order__label-checkbox">
-                <input type="checkbox" class="form-order__input" name="product-color__grey" checked>
+              <input type="checkbox" class="form-order__input" id="grey" name="product-color__grey" checked>
+              <label class="subtitle form-order__label form-order__label-checkbox" for="grey">
+
                 Серый
               </label>
-              <label class="subtitle form-order__label form-order__label-checkbox">
-                <input type="checkbox" class="form-order__input" name="product-color__tiffany">
+              <input type="checkbox" class="form-order__input" id="tiffany" name="product-color__tiffany">
+              <label class="subtitle form-order__label form-order__label-checkbox" for="tiffany">
+
                 «Тиффани»
               </label>
-              <label class="subtitle form-order__label form-order__label-checkbox">
-                <input type="checkbox" class="form-order__input" name="product-color__black">
+              <input type="checkbox" class="form-order__input" id="black" name="product-color__black">
+              <label class="subtitle form-order__label form-order__label-checkbox" for="black">
+
                 Черный
               </label>
-              <label class="subtitle form-order__label form-order__label-checkbox">
-                <input type="checkbox" class="form-order__input" name="product-color__pink">
+              <input type="checkbox" class="form-order__input" id="pink" name="product-color__pink">
+              <label class="subtitle form-order__label form-order__label-checkbox" for="pink">
+
                 Розовый
               </label>
-              <label class="subtitle form-order__label form-order__label-checkbox">
-                <input type="checkbox" class="form-order__input" name="product-color__orange">
+              <input type="checkbox" class="form-order__input" id="orange" name="product-color__orange">
+              <label class="subtitle form-order__label form-order__label-checkbox" for="orange">
+
                 Оранжевый
               </label>
             </div>
