--- a/index.html
+++ b/index.html
@@ -327,8 +327,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/script.js"></script>
-
     <section class="modal-order">
       <div class="container">
         <h2 class="page-subtitle">Добавить в&nbsp;корзину</h2>
@@ -353,5 +351,9 @@
         <button type="button" class="button modal-order__add" name="button">Добавить</button>
       </div>
     </section>
+    <script src="js/script.js"></script>
+    <script src="js/picturefill.js"></script>
+
+
   </body>
 </html>
