--- a/catalog.html
+++ b/catalog.html
@@ -282,6 +282,31 @@
           </div>
         </div>
       </footer>
+      <section class="modal-order">
+        <div class="container">
+          <h2 class="page-subtitle">Добавить в&nbsp;корзину</h2>
+          <p class="text">Выберите размер:</p>
+          <form class="modal-order__form" action="https://echo.htmlacademy.ru/">
+            <div class="modal-order__list">
+              <label for="" class="modal-order__label">
+                <span class="modal-order__label--size">S</span>
+                <input type="radio" class="modal-order__input">
+              </label>
+              <label for="" class="modal-order__label">
+                <span class="modal-order__label--size">M</span>
+                <input type="radio" class="modal-order__input">
+              </label>
+              <label for="" class="modal-order__label">
+                <span class="modal-order__label--size">L</span>
+                <input type="radio" class="modal-order__input">
+              </label>
+            </div>
+
+          </form>
+          <button type="button" class="button modal-order__add" name="button">Добавить</button>
+        </div>
+      </section>
       <script src="js/script.js"></script>
+      <script src="js/picturefill.js"></script>
     </body>
   </html>
