--- a/index.html
+++ b/index.html
@@ -327,7 +327,9 @@
         </div>
       </div>
     </footer>
-    <section class="modal-order">
+    <div class="modal">
+    <div class="modal__overlay"></div>
+    <div class="modal-order">
       <div class="container">
         <h2 class="page-subtitle">Добавить в&nbsp;корзину</h2>
         <p class="text">Выберите размер:</p>
@@ -350,7 +352,8 @@
         </form>
         <button type="button" class="button modal-order__add" name="button">Добавить</button>
       </div>
-    </section>
+    </div>
+    </div>
     <script src="js/script.js"></script>
     <script src="js/picturefill.js"></script>
 
