--- a/catalog.html
+++ b/catalog.html
@@ -225,30 +225,33 @@
         </div>
       </div>
     </footer>
-    <div class="modal-order">
-      <div class="container">
-        <h2 class="page-subtitle">Добавить в&nbsp;корзину</h2>
-        <p class="text">Выберите размер:</p>
-        <form class="modal-order__form" action="https://echo.htmlacademy.ru/">
-          <div class="modal-order__list">
-            <label class="modal-order__label" for="size-s">
-              <span class="modal-order__label--size">S</span>
-              <input type="radio" class="modal-order__input" id="size-s">
-            </label>
-            <label class="modal-order__label" for="size-m">
-              <span class="modal-order__label--size">M</span>
-              <input type="radio" class="modal-order__input" id="size-m">
-            </label>
-            <label class="modal-order__label" for="size-L">
-              <span class="modal-order__label--size">L</span>
-              <input type="radio" class="modal-order__input" id="size-L">
-            </label>
+    <div class="modal">
+      <div class="modal__overlay"></div>
+      <div class="modal-order">
+        <div class="container">
+          <h2 class="page-subtitle">Добавить в&nbsp;корзину</h2>
+          <p class="text">Выберите размер:</p>
+          <form class="modal-order__form" action="https://echo.htmlacademy.ru/">
+            <div class="modal-order__list">
+              <input type="radio" class="modal-order__input" id="size-s" name="product-size" value="s">
+              <label class="modal-order__label" for="size-s">
+                <span class="modal-order__label--size">S</span>
+              </label>
+              <input type="radio" class="modal-order__input" name="product-size" id="size-m" value="m">
+              <label class="modal-order__label" for="size-m">
+                <span class="modal-order__label--size">M</span>
+              </label>
+              <input type="radio" class="modal-order__input" name="product-size" id="size-L" value="L">
+              <label class="modal-order__label" for="size-L">
+                <span class="modal-order__label--size">L</span>
+              </label>
+            </div>
+            <button type="button" class="button modal-order__add" name="button">Добавить</button>
           </div>
-
         </form>
-        <button type="button" class="button modal-order__add" name="button">Добавить</button>
       </div>
     </div>
+
     <script src="js/script.js"></script>
     <script src="js/picturefill.js"></script>
   </body>
