--- a/index.html
+++ b/index.html
@@ -279,15 +279,15 @@
           <p class="text">Выберите размер:</p>
           <form class="modal-order__form" action="https://echo.htmlacademy.ru/">
             <div class="modal-order__list">
-              <input type="radio" class="modal-order__input" id="size-s" name="product-size">
+              <input type="radio" class="modal-order__input modal-order__input--size-s" id="size-s" name="product-size">
               <label class="modal-order__label" for="size-s">
                 <span class="modal-order__label--size">S</span>
               </label>
-              <input type="radio" class="modal-order__input" name="product-size" id="size-m">
+              <input type="radio" class="modal-order__input modal-order__input--size-m" name="product-size" id="size-m">
               <label class="modal-order__label" for="size-m">
                 <span class="modal-order__label--size">M</span>
               </label>
-              <input type="radio" class="modal-order__input" name="product-size" id="size-L">
+              <input type="radio" class="modal-order__input modal-order__input--size-l" name="product-size" id="size-L">
               <label class="modal-order__label" for="size-L">
                 <span class="modal-order__label--size">L</span>
               </label>
