--- a/catalog.html
+++ b/catalog.html
@@ -178,7 +178,7 @@
       <div class="container">
         <a href="index.html" class="page-footer__logo">
           <svg class="page-footer__icon" width="102" height="34">
-            <use xlink:href="#logo-footer"></use>
+            <use xlink:href="#icon-logo-footer"></use>
           </svg>
         </a>
         <ul class="page-footer__social social">
@@ -209,7 +209,7 @@
           <a href="https://htmlacademy.ru/intensive/adaptive" class="coopyright__link">
             <span class="coopyright__text">Разработано</span>
             <svg class="coopyright__icon" width="27" height="37">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy" width="27" height="34"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-logo-htmlacademy" width="27" height="34"></use>
             </svg>
           </a>
         </div>
