--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
       </section>
       <section class="week-product">
-        <div class="container container--content">
+        <div class="container container__content container__content--week-product">
           <div class="week-product__title">
             <h2 class="page-subtitle">Вязаные корзинки</h2>
             <h3 class="week-product__title-description">Товар недели</h3>
@@ -112,9 +112,13 @@
               </tr>
             </table>
             <picture class="week-product__picture">
+              <source type="image/webp" media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.webp 1x, img/triple-set-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.webp 1x, img/triple-set-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/triple-set-mobile.webp 1x, img/triple-set-mobile@2x.webp 2x">
+
               <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg, img/triple-set-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg, img/triple-set-tablet@2x.jpg 2x">
-              <img class="week-product__picture--image"  src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" width="260" height="315" alt="Вязаные корзинки">
+              <img class="week-product__image" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" width="260" height="315" alt="Вязаные корзинки">
             </picture>
             <b class="week-product__price">Цена: 990 руб.</b>
             <a href="#" class="button week-product__order">ЗАКАЗАТЬ</a>
@@ -122,7 +126,7 @@
         </div>
       </section>
       <section class="advantages">
-        <div class="container container--content">
+        <div class="container container__content">
           <h2 class="page-subtitle">Коротко о нас:</h2>
           <ul class="advantages__list">
             <li class="subtitle advantages__item">Экологически чистые&nbsp;материалы
@@ -159,7 +163,7 @@
         </div>
       </section>
       <section class="reviews">
-        <div class="container container--content">
+        <div class="container container__content">
           <h2 class="page-subtitle reviews__title">Отзывы</h2>
           <div class="reviews__list reviews__slider">
             <blockquote class="text reviews__item">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</blockquote>
@@ -170,12 +174,12 @@
           </div>
           <div class="reviews__nav">
             <button class="reviews__button reviews__button--next" type="button" name="button">
-              <svg class="reviews__nav--icon" width="50" height="26">
+              <svg class="reviews__icon" width="50" height="26">
                 <use xlink:href="#icon-left-arrow"></use>
               </svg>
             </button>
             <button class="reviews__button reviews__button--previous" type="button" name="button">
-              <svg class="reviews__nav--icon" width="50" height="26">
+              <svg class="reviews__icon" width="50" height="26">
                 <use xlink:href="#icon-right-arrow"></use>
               </svg>
             </button>
@@ -184,7 +188,7 @@
         </div>
       </section>
       <section class="contacts">
-        <div class="container container--content">
+        <div class="container container__content">
           <div class="contacts__info">
             <h2 class="page-subtitle">Контакты</h2>
             <div class="contacts__list">
@@ -204,6 +208,10 @@
 
           <div class="contacts__location">
             <picture class="contacts__location-picture">
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/map-desktop@1x.webp 1x, img/map-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/map-tablet@1x.webp 1x, img/map-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/map-mobile@1x.webp 1x, img/map-mobile@2x.webp 2x">
+
               <source media="(min-width: 1150px)" srcset="img/map-desktop@1x.jpg, img/map-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="img/map-tablet@1x.jpg, img/map-tablet@2x.jpg 2x">
               <img class="contacts__location-map" src="img/map-mobile@1x.jpg" srcset="img/map-mobile@2x.jpg 2x" alt="г. Санкт-Петербург,ул. Большая Конюшенная,д. 19/8, офис 101">
@@ -222,6 +230,7 @@
     <footer class="page-footer">
       <div class="container">
         <a class="page-footer__logo">
+          <span class="page-footer__logo-ally">Мишка</span>
           <svg class="page-footer__icon" width="102" height="34">
             <use xlink:href="#icon-logo-footer"></use>
           </svg>
@@ -229,6 +238,7 @@
         <ul class="page-footer__social social">
           <li class="social__item">
             <a href="#" class="social__link social__link--inst">
+              <span class="social__link-ally">Инстаграмм</span>
               <svg class="social__icon" width="22" height="21">
                 <use xlink:href="#icon-insta"></use>
               </svg>
@@ -236,6 +246,7 @@
           </li>
           <li class="social__item">
             <a href="#" class="social__link social__link--fb">
+              <span class="social__link-ally">Фейсбук</span>
               <svg class="social__icon" width="15" height="28">
                 <use xlink:href="#icon-fb"></use>
               </svg>
@@ -243,6 +254,7 @@
           </li>
           <li class="social__item">
             <a href="#" class="social__link social__link--tw">
+              <span class="social__link-ally">Твиттер</span>
               <svg class="social__icon" width="23" height="20">
                 <use xlink:href="#icon-twitter"></use>
               </svg>
@@ -271,20 +283,21 @@
             <div class="modal-order__list">
               <input type="radio" class="modal-order__input modal-order__input--size-s" id="size-s" name="product-size">
               <label class="modal-order__label" for="size-s">
-                <span class="modal-order__label--size">S</span>
+                <span class="modal-order__size">S</span>
               </label>
               <input type="radio" class="modal-order__input modal-order__input--size-m" name="product-size" id="size-m">
               <label class="modal-order__label" for="size-m">
-                <span class="modal-order__label--size">M</span>
+                <span class="modal-order__size">M</span>
               </label>
               <input type="radio" class="modal-order__input modal-order__input--size-l" name="product-size" id="size-L">
               <label class="modal-order__label" for="size-L">
-                <span class="modal-order__label--size">L</span>
+                <span class="modal-order__size">L</span>
               </label>
             </div>
             <button type="button" class="button modal-order__add" name="button">Добавить</button>
-          </div>
-        </form>
+          </form>
+        </div>
+
       </div>
     </div>
 
