--- a/form.html
+++ b/form.html
@@ -150,7 +150,7 @@
 
             <div class="form-order__options-wrapper ">
               <h2 class="form-order__section-title form-order__section-title--phone">Тел</h2>
-              <div class="form-order__section--item form-order__section--phone">
+              <div class="form-order__section-item form-order__section-item--phone">
                 <input class="form-order__input-text form-order__input-phone" type="tel" name="phone" value="" placeholder="+7 ХХХ ХХ ХХ*">
                 <svg class="form-order__input-icon-phone" width="25" height="25">
                   <use xlink:href="#icon-phone"></use>
@@ -159,7 +159,7 @@
             </div>
             <div class="form-order__options-wrapper">
               <h2 class="form-order__section-title form-order__section-title--email">E-&nbsp;mail</h2>
-              <div class="form-order__section--item form-order__section--email">
+              <div class="form-order__section-item form-order__section-item--email">
                 <input class="form-order__input-text form-order__input-email" type="email" name="email" value="" placeholder="Ваш Email*">
                 <svg class="form-order__input-icon-email" width="32" height="32">
                   <use xlink:href="#icon-mail"></use>
@@ -189,7 +189,8 @@
     </main>
     <footer class="page-footer">
       <div class="container">
-        <a href="index.html" class="page-footer__logo">
+        <a class="page-footer__logo">
+          <span class="page-footer__logo-ally">Мишка</span>
           <svg class="page-footer__icon" width="102" height="34">
             <use xlink:href="#icon-logo-footer"></use>
           </svg>
@@ -197,6 +198,7 @@
         <ul class="page-footer__social social">
           <li class="social__item">
             <a href="#" class="social__link social__link--inst">
+              <span class="social__link-ally">Инстаграмм</span>
               <svg class="social__icon" width="22" height="21">
                 <use xlink:href="#icon-insta"></use>
               </svg>
@@ -204,6 +206,7 @@
           </li>
           <li class="social__item">
             <a href="#" class="social__link social__link--fb">
+              <span class="social__link-ally">Фейсбук</span>
               <svg class="social__icon" width="15" height="28">
                 <use xlink:href="#icon-fb"></use>
               </svg>
@@ -211,6 +214,7 @@
           </li>
           <li class="social__item">
             <a href="#" class="social__link social__link--tw">
+              <span class="social__link-ally">Твиттер</span>
               <svg class="social__icon" width="23" height="20">
                 <use xlink:href="#icon-twitter"></use>
               </svg>
